# whatsapp-wrapper

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/whatsapp_wrapper/: __init__.py  client.py  core.py  models.py  permissions.py  sender.py
tests/: test_client_api.py  test_sender_api.py
